--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 USER_AGENT="Next.fm/0.1.0 (https://github.com/jerome-fosse/next-fm)"
-DISCOGS_BASEURL="https://api.discogs.com"
+DISCOGS_BASEURL=https://api.discogs.com
 DISCOGS_TIMEOUT=3000
+LASTFM_BASE_URL=https://ws.audioscrobbler.com
