--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 USER_AGENT="Next.fm/0.1.0 (https://github.com/jerome-fosse/next-fm)"
+
+SEARCH_ALBUMS_PAGE_SIZE=20
+
 DISCOGS_BASEURL=https://api.discogs.com
 DISCOGS_TIMEOUT=3000
+
 LASTFM_BASE_URL=https://ws.audioscrobbler.com
+LASTFM_TIMEOUT=3000
