--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
