mise en place d'un cache sur les appels discogs et last.fm

--- a/.env
+++ b/.env
@@ -7,3 +7,13 @@ DISCOGS_SEARCH_PAGE_SIZE=30
 LASTFM_BASE_URL=https://ws.audioscrobbler.com
 LASTFM_TIMEOUT=3000
 LASTFM_SEARCH_PAGE_SIZE=30
+
+CACHE_DISCOGS_ALBUMS_CAPACITY=100
+CACHE_DISCOGS_ALBUMS_TTL=3600000
+CACHE_DISCOGS_SEARCH_CAPACITY=100
+CACHE_DISCOGS_SEARCH_TTL=900000
+
+CACHE_LASTFM_ALBUMS_CAPACITY=100
+CACHE_LASTFM_ALBUMS_TTL=3600000
+CACHE_LASTFM_SEARCH_CAPACITY=100
+CACHE_LASTFM_SEARCH_TTL=900000
