--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "lru-cache": "^11.2.6",
     "next": "16.1.6",
     "picocolors": "^1.1.1",
     "react": "19.2.3",
