cache pour api Last.FM getUserInfos

--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ CACHE_LASTFM_ALBUMS_CAPACITY=100
 CACHE_LASTFM_ALBUMS_TTL=3600000
 CACHE_LASTFM_SEARCH_CAPACITY=100
 CACHE_LASTFM_SEARCH_TTL=900000
+CACHE_LASTFM_USERINFOS_CAPACITY=10
+CACHE_LASTFM_USERINFOS_TTL=600000
