--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "ts-pattern": "^5.9.0",
     "zod": "^4.3.6",
     "zod-form-data": "^3.0.1"
   },
