MAJ axios dependencies. prévoir migration vers fetch

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-nowarn": "NODE_NO_WARNINGS=1 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
     "fp-ts": "^2.16.11",
     "js-cookie": "^3.0.5",
     "lru-cache": "^11.2.6",
